# MCS_nicotine_puberty

./: .gitignore  404.html  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml
docs/: files.md  index.md  variables.md
files/: index.html
search/: search_index.json
src/nicpub/: main.py
src/nicpub/data/: scores.py  setup.py  transform.py
src/nicpub/stats/: descriptive.py  multinom.R  summaries.R
src/nicpub/viz/: figs.py
variables/: index.html
