[tool.poetry]
name = "MCS_nicotine_puberty"
version = "0.1.0"
description = "Analysis on the effects of nicotine exposure on puberty using the MCS cohort."
authors = ["Tomas Gonzalez Zarzar <tomas.gonzalez@umayor.cl>"]
license = "GNU General Public License v3 (GPLv3)"
readme = "README.md"
packages = [
    {include = "nicpub", from = "src"},
]

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.25"
pandas = "^2.1.1"
matplotlib = "^3.8"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.3"
seaborn = "^0.13"

[tool.poetry.scripts]
nicpub = 'nicpub.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"